# BizSimAgent

./: .gitignore  README.md  example_context.json
JiraGamification2/: README.md  example_ask.txt  pyproject.toml  setup.py
JiraGamification2/agents/: __init__.py  bizsim.py
JiraGamification2/bizsim/: __init__.py  gamify.py
bizsim/: cli.py  models.py  simulate.py
